# ai-music

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: llm_tasks.yaml  models.example.toml  providers.example.toml  stem_profiles.yaml  suno_api_mapping.template.json  suno_style_aliases.json
docs/: dancefloor-drum-and-bass-production-guide.md  suno_complete_guide.md
docs/reference/suno/: README.md  creative-sliders-reference.md  genre-feedback-notes.md  remix-and-inspire-workflows.md  sounds-sample-workflow.md
playlists/: dnb-afterparty.csv  dnb-beast-mode.csv  dnb-epic.csv  dnb-heavy.csv  dnb-hits.csv  dnb-jungle.csv  dnb-liquid.csv  edm-chill-pop.csv  edm-chill.csv  edm-hits.csv  edm-slow-aggressive.csv  junior-choice.csv  progessive-melodic-house.csv
skills/suno-dnb-hit-room/: SKILL.md
skills/suno-dnb-hit-room/agents/: openai.yaml
skills/suno-dnb-hit-room/references/: round-runbook.md
skills/suno-lyrics-tag-guardrails/: SKILL.md
skills/suno-lyrics-tag-guardrails/agents/: openai.yaml
skills/suno-song-analysis/: SKILL.md
skills/suno-song-analysis/agents/: openai.yaml
skills/suno-song-analysis/references/: api-mapping.md  workflow.md
skills/suno-song-analysis/scripts/: run_pipeline.py
src/ai_music/: cli.py  config.py
src/ai_music/analyze/: __init__.py  guide_generation.py  playlist_profiles.py
tests/: test_markdown_chunking.py  test_suno_adaptation.py  test_suno_baseline_aggregation.py  test_suno_cli.py  test_suno_filtering.py  test_suno_fragments.py  test_suno_mapping.py  test_suno_workflow.py  test_track_normalize.py
(+42 files in other folders)
